fix gap between session cinemas for mobile view

--- a/client/src/components/OperationKino/SessionGallery/SessionGallery.module.css
+++ b/client/src/components/OperationKino/SessionGallery/SessionGallery.module.css
@@ -142,7 +142,9 @@
     cursor: pointer;
     color: white;
     font-size: 0.95rem;
-    transition: color 0.2s, text-decoration 0.2s;
+    transition:
+      color 0.2s,
+      text-decoration 0.2s;
     background-color: #333;
     border-radius: 10px;
     padding: 7px;
@@ -187,12 +189,11 @@
   }
 
   .cinemaColumn {
+    display: flex;
+    flex-direction: column;
     float: left;
     width: 50%;
-  }
-
-  .cinemaColumn div {
-    padding-bottom: 10px;
+    gap: 10px;
   }
 
   .cinemaLink {
